--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
         <h1 class="mb-5">URL Shortener</h1>
         <i class="fas fa-link" style="font-size: 200px;"></i>
     </div>
-    <form class="row m-auto" style="max-width: 55%;">
+    <form action="/shorturl" method="POST" class="row m-auto" style="max-width: 55%;">
         <div class="input-group input-group-sm mb-3">
             <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm"
                 placeholder="url">
@@ -11,7 +11,7 @@
         <div>Success! You can use this link :</div>
         <div class="mb-3 mt-3" style="text-align: center;">http:/132/dsf45</div>
         <div class="mt-3 d-flex justify-content-center">
-            <button type="button" class="btn btn-outline-success">產生</button>
+            <button type="submit" class="btn btn-outline-success">產生</button>
         </div>
     </form>
 </div>
