--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,15 +3,24 @@
         <h1 class="mb-5">URL Shortener</h1>
         <i class="fas fa-link" style="font-size: 200px;"></i>
     </div>
-    <form action="/shorturl" method="POST" class="row m-auto" style="max-width: 55%;">
+    <form action="/" method="POST" class="row m-auto" style="max-width: 55%;">
         <div class="input-group input-group-sm mb-3">
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm"
-                placeholder="url">
+            <input type="url" class="form-control" aria-label="Sizing example input" name="inputUrl" id="inputUrl"
+                value="{{inputUrl}}" aria-describedby="inputGroup-sizing-sm" placeholder="url" required>
         </div>
-        <div>Success! You can use this link :</div>
-        <div class="mb-3 mt-3" style="text-align: center;">http:/132/dsf45</div>
         <div class="mt-3 d-flex justify-content-center">
-            <button type="submit" class="btn btn-outline-success">產生</button>
+            <button type="submit" class="btn btn-outline-success">create</button>
         </div>
     </form>
+    <div class="mt-5">
+        {{#if short}}
+        <div>
+            <div class="ml-5" style="text-align: center;">Success! You can use this link :</div>
+            <div class="mb-3 mt-3" style="text-align: center;"><a href="/{{short}}" target="_blank">{{shortUrl}}</a></div>
+        </div>
+        <div class="mt-3 mb-5 d-flex justify-content-center">
+            <button type="submit" class="btn btn-outline-success">copy</button>
+        </div>
+        {{/if}}
+    </div>
 </div>
