--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,10 +16,10 @@
         {{#if short}}
         <div>
             <div class="ml-5" style="text-align: center;">Success! You can use this link :</div>
-            <div class="mb-3 mt-3" style="text-align: center;"><a href="/{{short}}" target="_blank">{{shortUrl}}</a></div>
+            <div class="mb-3 mt-3" style="text-align: center;" ><a href="/{{short}}" target="_blank" id="copy-link">{{shortUrl}}</a></div>
         </div>
         <div class="mt-3 mb-5 d-flex justify-content-center">
-            <button type="submit" class="btn btn-outline-success">copy</button>
+            <button type="submit" class="btn btn-outline-success" id="btn-copy">copy</button>
         </div>
         {{/if}}
     </div>
