--- a/views/index.hbs
+++ b/views/index.hbs
@@ -16,7 +16,7 @@
         {{#if short}}
         <div>
             <div class="ml-5" style="text-align: center;">Success! You can use this link :</div>
-            <div class="mb-3 mt-3" style="text-align: center;" ><a href="/{{short}}" target="_blank" id="copy-link">{{shortUrl}}</a></div>
+            <div class="mb-3 mt-3" style="text-align: center;" ><a href="/{{short}}" target="_blank" id="copy-link">{{baseUrl}}</a></div>
         </div>
         <div class="mt-3 mb-5 d-flex justify-content-center">
             <button type="submit" class="btn btn-outline-success" id="btn-copy">copy</button>
